[package]
name = "ringbuffbrr"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ringbuf_bench"
harness = false

[lib]
name = "ringbuffbrr"
path = "src/lib.rs"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"